# pchat-server

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  database.cpp  json_assist.cpp  main.cpp  network.cpp  package.cpp  pchat-server.cpp  pchat.json  service.cpp  service_account.cpp  service_friend.cpp  service_group.cpp  service_record.cpp  watchdog.cpp
doc/: InitMySQL.sql  database_connstr.md  package_format.txt  pkg_type.txt
extra/: watchdog.cpp
include/: dpkg.h  json_assist.h  package.h  rvpkg.h  service.h  spkg.h  watchdog.h
include/portal/: crypt.h  network.h
network/: dpkg.cpp  package.cpp  rvpkg.cpp  spkg.cpp
pcp_protocol/: Cargo.toml
pcp_protocol/src/: lib.rs
service/: service_account.cpp  service_database.cpp  service_friend.cpp  service_group.cpp  service_record.cpp
source/core/: concurrency_manager.cc  concurrency_manager.h  context.cc  context.h  network_manager.cc  network_manager.h  pchat_server.cc  pchat_server.h  persistence_manager.cc  persistence_manager.h  watchdog.cc  watchdog.h
source/foundation/: foundation.h
source/network/: net_worker.cc  net_worker.h
source/protocol/proto/: account.proto  common.proto  generate_proto.sh  group.proto
source/service/: account_service.cc  account_service.h  group_service.cc  group_service.h  service.cc  service.h  service_manager.cc  service_manager.h
source/utils/: arguments_manager.cc  arguments_manager.h  file.cc  file.h
src/: main.rs  protocol.rs
tools/: init_database.sql  protoc-gen-pchat.cc
