[package]
name = "pchat-server"
version = "0.1.0"
authors = ["pangda"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { "version" = "1.0", "features" = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] }
#syn = "1.0"
#quote = "1.0"
pcp_protocol = { path = "./pcp_protocol" }
