[package]
name = "pcp_protocol"
version = "0.1.0"
authors = ["hepangda <pangda@xiyoulinux.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
#proc_macro2 = "1.0"